Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -293,10 +293,8 @@ nav {
 }
 
 .widget.extendednavigation ul {
-    display: table;
     margin: 0 auto;
     padding: 0;
-    float: none;
 }
 
 .widget.extendednavigation a.pull {
